--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
